--- a/Learning Progress Tracker (Java)/A detailed record/task-info.yaml
+++ b/Learning Progress Tracker (Java)/A detailed record/task-info.yaml
@@ -21,6 +21,21 @@ files:
   - name: src/tracker/Menu.java
     visible: true
     learner_created: true
+  - name: src/tracker/Command.java
+    visible: true
+    learner_created: true
+  - name: test/tracker/MenuTest.java
+    visible: true
+    learner_created: true
+  - name: src/tracker/ScannerUtil.java
+    visible: true
+    learner_created: true
+  - name: src/tracker/Course.java
+    visible: true
+    learner_created: true
 feedback_link: https://hyperskill.org/learn/step/14398#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: "Sun, 19 Jan 2025 15:58:02 UTC"
 record: 3
