--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -3,7 +3,7 @@ hyperskill_project:
   ide_files: https://cogniterra.org/media/attachments/lesson/25673/additional_files.json
   is_template_based: false
   use_ide: true
-update_date: "Fri, 17 Jan 2025 15:02:48 UTC"
+update_date: "Sun, 19 Jan 2025 15:56:37 UTC"
 stages:
   - id: 979
     step: 14396
@@ -13,7 +13,7 @@ stages:
     is_completed: true
   - id: 981
     step: 14398
-    is_completed: false
+    is_completed: true
   - id: 982
     step: 14399
     is_completed: false
