practice Comparator, Dealing with modifiers, Regex, design pattersn, functional programming

--- a/Topics/section-info.yaml
+++ b/Topics/section-info.yaml
@@ -14,3 +14,5 @@ content:
   - Encapsulating object creation
   - Strategy
   - Template method
+  - Standard functional interfaces
+  - Function composition
