practice regex and functional programming

--- a/Topics/Standard functional interfaces/Describe the function/task-info.yaml
+++ b/Topics/Standard functional interfaces/Describe the function/task-info.yaml
@@ -18,6 +18,6 @@ files:
     visible: true
     learner_created: false
 feedback_link: https://hyperskill.org/learn/step/2395#comment
-status: Unchecked
+status: Solved
 record: -1
 local_check: false
