--- a/Topics/Standard functional interfaces/lesson-info.yaml
+++ b/Topics/Standard functional interfaces/lesson-info.yaml
@@ -4,3 +4,7 @@ content:
   - Interface matching
   - Accounts
   - Describe the function
+  - Select suitable interfaces
+  - Functional interfaces utilization
+  - Find a functional interface
+  - Ternary operator
