--- a/Learning Progress Tracker (Java)/Retrieving statistics/task-info.yaml
+++ b/Learning Progress Tracker (Java)/Retrieving statistics/task-info.yaml
@@ -33,6 +33,12 @@ files:
   - name: src/tracker/Menu.java
     visible: true
     learner_created: true
+  - name: src/tracker/Statistics.java
+    visible: true
+    learner_created: true
+  - name: test/tracker/StatisticsTest.java
+    visible: true
+    learner_created: true
 feedback_link: https://hyperskill.org/learn/step/14399#comment
 status: Failed
 feedback:
