--- a/Topics/LinkedList vs. ArrayList/The big merge/task-info.yaml
+++ b/Topics/LinkedList vs. ArrayList/The big merge/task-info.yaml
@@ -8,23 +8,6 @@ files:
     visible: true
     learner_created: true
 feedback_link: https://hyperskill.org/learn/step/12398#comment
-status: Failed
-feedback:
-  message: |
-    Failed test #1 of 4. Wrong answer
-
-    This is a sample test from the problem statement!
-
-    Test input:
-    a b c d e
-    f g h i j
-
-    Correct output:
-    The new size of LinkedList is 10
-    [a, b, c, d, e, f, g, h, i, j]
-
-    Your code output:
-    [a, b, c, d, e, f, g, h, i, j]
-  time: "Sun, 29 Dec 2024 17:19:17 UTC"
+status: Solved
 record: -1
 submission_language: java17
