--- a/Topics/Parameterized test/Palindromes/task-info.yaml
+++ b/Topics/Parameterized test/Palindromes/task-info.yaml
@@ -5,6 +5,6 @@ files:
     highlight_level: NONE
     learner_created: false
 feedback_link: https://hyperskill.org/learn/step/12885#comment
-status: Failed
+status: Solved
 record: -1
 submission_language: java17
