--- a/Topics/Standard functional interfaces/Ternary operator/task-info.yaml
+++ b/Topics/Standard functional interfaces/Ternary operator/task-info.yaml
@@ -5,6 +5,6 @@ files:
     highlight_level: NONE
     learner_created: false
 feedback_link: https://hyperskill.org/learn/step/2400#comment
-status: Unchecked
+status: Solved
 record: -1
 submission_language: java17
