--- a/Topics/Strategy/Max and Min/task-info.yaml
+++ b/Topics/Strategy/Max and Min/task-info.yaml
@@ -4,6 +4,6 @@ files:
     visible: true
     learner_created: false
 feedback_link: https://hyperskill.org/learn/step/3331#comment
-status: Unchecked
+status: Solved
 record: -1
 submission_language: java17
