practice Comparable and Regex

--- a/Topics/Regexes in programs/lesson-info.yaml
+++ b/Topics/Regexes in programs/lesson-info.yaml
@@ -5,3 +5,5 @@ content:
   - Check IP address
   - Vehicle registration number
   - Illegal identifiers
+  - Finding digit-letter sequences with regex
+  - Check the date
