--- a/Learning Progress Tracker (Java)/Retrieving statistics/task-info.yaml
+++ b/Learning Progress Tracker (Java)/Retrieving statistics/task-info.yaml
@@ -43,9 +43,9 @@ feedback_link: https://hyperskill.org/learn/step/14399#comment
 status: Failed
 feedback:
   message: |-
-    Wrong answer in test #32
+    Wrong answer in test #33
 
-    When the &quot;statistics&quot; command is entered, your program must print: &quot;Type the name of a course to see details or &#39;back&#39; to quit:&quot;, but your output was: Error: unknown command!
+    Expected 2 lines, but your output was only 1 lines.
 
     Please find below the output of your program during this failed test.
     Note that the &#39;&gt;&#39; character indicates the beginning of the input line.
@@ -54,6 +54,14 @@ feedback:
 
     Learning Progress Tracker
     &gt; statistics
-    Error: unknown command!
-  time: "Thu, 23 Jan 2025 03:48:22 UTC"
+    Type the name of a course to see details or &#39;back&#39; to quit:
+    Most popular: n/a
+    Least popular: n/a
+    Highest activity: n/a
+    Lowest activity: n/a
+    Easiest course: n/a
+    Hardest course: n/a
+    &gt; Java
+    Java
+  time: "Tue, 18 Feb 2025 05:01:27 UTC"
 record: 4
