add top students stats

--- a/Topics/Choosing the right collection/A proper collection to avoid duplicates/task-info.yaml
+++ b/Topics/Choosing the right collection/A proper collection to avoid duplicates/task-info.yaml
@@ -1,5 +1,10 @@
 type: choice
 is_multiple_choice: false
+options:
+  - text: HashSet
+  - text: ArrayList
+  - text: Any implementation of the Collection interface
+  - text: TreeSet
 files:
   - name: src/Task.java
     visible: true
