--- a/Topics/HashMap/How many buckets/task-info.yaml
+++ b/Topics/HashMap/How many buckets/task-info.yaml
@@ -1,5 +1,11 @@
 type: choice
 is_multiple_choice: false
+options:
+  - text: 16 buckets as default and increases when the number of map entries exceeds
+      load factor
+  - text: 32 buckets
+  - text: the number is calculated after the first key-pair is added
+  - text: always 16 buckets
 files:
   - name: src/Task.java
     visible: true
