--- a/Topics/LinkedList vs. ArrayList/Fast for LinkedList/task-info.yaml
+++ b/Topics/LinkedList vs. ArrayList/Fast for LinkedList/task-info.yaml
@@ -1,5 +1,11 @@
 type: choice
-is_multiple_choice: false
+is_multiple_choice: true
+options:
+  - text: "set(int index, E element)"
+  - text: get(int index)
+  - text: "add(int index, E element)"
+  - text: add(E e)
+  - text: addFirst(E e)
 files:
   - name: src/Task.java
     visible: true
