--- a/Topics/Parameterized test/Looking for a bug/task-info.yaml
+++ b/Topics/Parameterized test/Looking for a bug/task-info.yaml
@@ -1,5 +1,11 @@
 type: choice
-is_multiple_choice: false
+is_multiple_choice: true
+options:
+  - text: '"level"'
+  - text: '"Stats"'
+  - text: '"race car"'
+  - text: '"(radar)"'
+  - text: '"rotator"'
 files:
   - name: src/Task.java
     visible: true
