--- a/Topics/Parameterized test/Tricky syntax/task-info.yaml
+++ b/Topics/Parameterized test/Tricky syntax/task-info.yaml
@@ -1,5 +1,11 @@
 type: choice
-is_multiple_choice: false
+is_multiple_choice: true
+options:
+  - text: test1
+  - text: test4
+  - text: test2
+  - text: test5
+  - text: test3
 files:
   - name: src/Task.java
     visible: true
