--- a/Topics/Regexes in programs/Understanding a Regular Expression Pattern/task-info.yaml
+++ b/Topics/Regexes in programs/Understanding a Regular Expression Pattern/task-info.yaml
@@ -1,5 +1,15 @@
 type: choice
 is_multiple_choice: false
+options:
+  - text: "The pattern matches a string starts with 2 or 3 digits followed by a dash,\
+    \ this group repeats three times at the end of the word."
+  - text: "The pattern matches a string starts with one or more whitespace characters\
+    \ followed by 2 or 3 digits that may optionally be followed by a dash, this group\
+    \ repeats three times at the end of the word."
+  - text: "The pattern matches a string starts with one or more whitespace characters\
+    \ followed by any characters that optionally be followed by a dash, this group\
+    \ repeats three times."
+  - text: The pattern matches any string that doesn&#x27;t contain any white space.
 files:
   - name: src/Task.java
     visible: true
