--- a/Topics/Replacing characters with Regex/Methods of Matcher/task-info.yaml
+++ b/Topics/Replacing characters with Regex/Methods of Matcher/task-info.yaml
@@ -1,5 +1,10 @@
 type: choice
-is_multiple_choice: false
+is_multiple_choice: true
+options:
+  - text: replaceOne
+  - text: replaceFirst
+  - text: replace
+  - text: replaceAll
 files:
   - name: src/Task.java
     visible: true
