--- a/Topics/Choosing the right collection/A proper collection to store ordered key-value pairs/task-info.yaml
+++ b/Topics/Choosing the right collection/A proper collection to store ordered key-value pairs/task-info.yaml
@@ -1,5 +1,10 @@
 type: choice
 is_multiple_choice: false
+options:
+  - text: HashMap
+  - text: LinkedList
+  - text: LinkedHashMap
+  - text: LinkedHashSet
 files:
   - name: src/Task.java
     visible: true
