--- a/Topics/Choosing the right collection/A proper sorted collection without duplicates/task-info.yaml
+++ b/Topics/Choosing the right collection/A proper sorted collection without duplicates/task-info.yaml
@@ -1,5 +1,10 @@
 type: choice
 is_multiple_choice: false
+options:
+  - text: TreeMap
+  - text: TreeSet
+  - text: LinkedHashSet
+  - text: HashSet
 files:
   - name: src/Task.java
     visible: true
