--- a/Topics/Comparable/compareTo/task-info.yaml
+++ b/Topics/Comparable/compareTo/task-info.yaml
@@ -1,5 +1,13 @@
 type: choice
-is_multiple_choice: false
+is_multiple_choice: true
+options:
+  - text: It is a positive value if the current object is greater than the parameter
+      object
+  - text: It is a negative value if the current object is less than the parameter object
+  - text: The value is zero if the current object is greater than the parameter object
+  - text: It is a negative value if the current object is greater than the parameter
+      object
+  - text: The value is zero if they are equal
 files:
   - name: src/Task.java
     visible: true
