--- a/Topics/Dealing with modifiers/Getting modifiers/task-info.yaml
+++ b/Topics/Dealing with modifiers/Getting modifiers/task-info.yaml
@@ -1,5 +1,10 @@
 type: choice
 is_multiple_choice: false
+options:
+  - text: "any methods, fields and constructors of user classes only"
+  - text: "any methods, fields and constructors of any class"
+  - text: "only public methods, fields and constructors of any class"
+  - text: "only public methods, fields and constructors of user classes"
 files:
   - name: src/Task.java
     visible: true
