--- a/Topics/Dealing with modifiers/Storing modifiers/task-info.yaml
+++ b/Topics/Dealing with modifiers/Storing modifiers/task-info.yaml
@@ -1,5 +1,11 @@
 type: choice
 is_multiple_choice: false
+options:
+  - text: specific <code>Modifier</code> class instance for every modifier type
+  - text: specific <code>int</code> variable for every modifier type
+  - text: specific <code>boolean</code> variable for every modifier type
+  - text: single <code>int</code> variable
+  - text: single <code>Modifier</code> class instance
 files:
   - name: src/Task.java
     visible: true
