--- a/Topics/Encapsulating object creation/Select statements/task-info.yaml
+++ b/Topics/Encapsulating object creation/Select statements/task-info.yaml
@@ -1,5 +1,11 @@
 type: choice
-is_multiple_choice: false
+is_multiple_choice: true
+options:
+  - text: A factory cannot be used by multiple clients.
+  - text: <b>Simple factory</b> and <b>abstract factory</b> are different names of the
+      same design pattern.
+  - text: A factory encapsulates a logic for creating objects.
+  - text: It is possible to create several simple factories for the same class hierarchy.
 files:
   - name: src/Task.java
     visible: true
