--- a/Topics/Encapsulating object creation/Shapes/task-info.yaml
+++ b/Topics/Encapsulating object creation/Shapes/task-info.yaml
@@ -1,5 +1,10 @@
 type: choice
-is_multiple_choice: false
+is_multiple_choice: true
+options:
+  - text: ShapeFactory factory = new ShapeFactory(); factory.getShape("POLY");
+  - text: ShapeFactory.getShape("POLYGON");
+  - text: new Polygon();
+  - text: ShapeFactory factory = new ShapeFactory(); factory.getShape("polygon");
 files:
   - name: src/Task.java
     visible: true
