--- a/Topics/HashMap/When to use/task-info.yaml
+++ b/Topics/HashMap/When to use/task-info.yaml
@@ -1,5 +1,9 @@
 type: choice
-is_multiple_choice: false
+is_multiple_choice: true
+options:
+  - text: you need to sort elements and put them in order
+  - text: you want to store elements as key-value pairs
+  - text: you wish to have complexity O(1) for get() and put() methods
 files:
   - name: src/Task.java
     visible: true
