--- a/Topics/Parameterized test/Argument sources/task-info.yaml
+++ b/Topics/Parameterized test/Argument sources/task-info.yaml
@@ -1,5 +1,11 @@
 type: choice
-is_multiple_choice: false
+is_multiple_choice: true
+options:
+  - text: '@CsvSource'
+  - text: '@MethodSource'
+  - text: '@FileSource'
+  - text: '@JSONSource'
+  - text: '@ValueSource'
 files:
   - name: src/Task.java
     visible: true
