--- a/Topics/Patterns and Matcher/The order of using classes/task-info.yaml
+++ b/Topics/Patterns and Matcher/The order of using classes/task-info.yaml
@@ -1,4 +1,8 @@
 type: sorting
+options:
+  - Create an object of Pattern
+  - Invoke matching methods
+  - ' Create an object of Matcher'
 files:
   - name: src/Task.java
     visible: true
@@ -6,3 +10,7 @@ files:
 feedback_link: https://hyperskill.org/learn/step/3714#comment
 status: Solved
 record: -1
+ordering:
+  - 0
+  - 1
+  - 2
