--- a/Topics/Regexes in programs/Ignoring spaces/task-info.yaml
+++ b/Topics/Regexes in programs/Ignoring spaces/task-info.yaml
@@ -1,5 +1,11 @@
 type: choice
 is_multiple_choice: false
+options:
+  - text: "\"\\\\s+[a-z]*\\\\s+\""
+  - text: "\"\\\\s{1,5}[a-z]+\\\\s{1,5}\""
+  - text: "\"\\\\s+[a-z]+\\\\s+\""
+  - text: "\"\\\\s*[a-z]+\\\\s*\""
+  - text: "\"\\\\s*[a-z]\\\\s+\""
 files:
   - name: src/Task.java
     visible: true
