--- a/Topics/Standard functional interfaces/Functional interfaces utilization/task-info.yaml
+++ b/Topics/Standard functional interfaces/Functional interfaces utilization/task-info.yaml
@@ -1,5 +1,11 @@
 type: choice
-is_multiple_choice: false
+is_multiple_choice: true
+options:
+  - text: LongUnaryOperator
+  - text: ToLongFunction&lt;Long&gt;
+  - text: "BiFunction&lt;Long, Long, Long&gt;"
+  - text: LongFunction&lt;Long&gt;
+  - text: "Function&lt;Long, Long&gt;"
 files:
   - name: src/Task.java
     visible: true
