--- a/Topics/Strategy/Benefits/task-info.yaml
+++ b/Topics/Strategy/Benefits/task-info.yaml
@@ -1,5 +1,10 @@
 type: choice
-is_multiple_choice: false
+is_multiple_choice: true
+options:
+  - text: It enables to choose an algorithm at run-time.
+  - text: It improves the performance of a program.
+  - text: It isolates the code of algorithms from the client code.
+  - text: It reduces the number of classes in a program.
 files:
   - name: src/Task.java
     visible: true
