--- a/Topics/Strategy/Statements/task-info.yaml
+++ b/Topics/Strategy/Statements/task-info.yaml
@@ -1,5 +1,10 @@
 type: choice
-is_multiple_choice: false
+is_multiple_choice: true
+options:
+  - text: An abstract strategy can be implemented by multiple concrete strategies.
+  - text: A concrete strategy cannot have any additional fields.
+  - text: A strategy has 0 or 1 method.
+  - text: The context holds a reference to a strategy.
 files:
   - name: src/Task.java
     visible: true
