--- a/Topics/Template method/A disadvantage/task-info.yaml
+++ b/Topics/Template method/A disadvantage/task-info.yaml
@@ -1,5 +1,10 @@
 type: choice
 is_multiple_choice: false
+options:
+  - text: "As the number of steps grows, it becomes too difficult to maintain"
+  - text: It's difficult to clone complex object
+  - text: Increases response time from the service
+  - text: It takes a lot of memory with the growing of snapshots
 files:
   - name: src/Task.java
     visible: true
