--- a/Topics/Template method/What does it do/task-info.yaml
+++ b/Topics/Template method/What does it do/task-info.yaml
@@ -1,5 +1,11 @@
 type: choice
 is_multiple_choice: false
+options:
+  - text: ensures the class only has a limited number of instances
+  - text: processes a request in a sequence of handlers
+  - text: "defines the skeleton of an algorithm in an operation, deferring some steps\
+    \ to subclasses"
+  - text: encapsulates a request as an object
 files:
   - name: src/Task.java
     visible: true
