--- a/Learning Progress Tracker (Java)/Notification service/task-info.yaml
+++ b/Learning Progress Tracker (Java)/Notification service/task-info.yaml
@@ -12,6 +12,33 @@ files:
   - name: test/LearningProgressTrackerTest.java
     visible: false
     learner_created: false
+  - name: test/tracker/StudentTest.java
+    visible: true
+    learner_created: true
+  - name: src/tracker/Statistics.java
+    visible: true
+    learner_created: true
+  - name: src/tracker/Student.java
+    visible: true
+    learner_created: true
+  - name: test/tracker/MenuTest.java
+    visible: true
+    learner_created: true
+  - name: test/tracker/StatisticsTest.java
+    visible: true
+    learner_created: true
+  - name: src/tracker/ScannerUtil.java
+    visible: true
+    learner_created: true
+  - name: src/tracker/Command.java
+    visible: true
+    learner_created: true
+  - name: src/tracker/Course.java
+    visible: true
+    learner_created: true
+  - name: src/tracker/Menu.java
+    visible: true
+    learner_created: true
 feedback_link: https://hyperskill.org/learn/step/14400#comment
 status: Unchecked
 record: -1
