--- a/Learning Progress Tracker (Java)/Notification service/task-info.yaml
+++ b/Learning Progress Tracker (Java)/Notification service/task-info.yaml
@@ -39,6 +39,14 @@ files:
   - name: src/tracker/Menu.java
     visible: true
     learner_created: true
+  - name: Archive.zip
+    visible: true
+    is_binary: true
+    learner_created: true
 feedback_link: https://hyperskill.org/learn/step/14400#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Well done! You've finished the project. Select a new project on <a href="https://hyperskill.org/projects">Hyperskill</a>
+    to continue learning.
+  time: "Fri, 07 Mar 2025 03:47:43 UTC"
 record: -1
