--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -3,7 +3,7 @@ hyperskill_project:
   ide_files: https://cogniterra.org/media/attachments/lesson/25673/additional_files.json
   is_template_based: false
   use_ide: true
-update_date: "Thu, 06 Mar 2025 20:36:16 UTC"
+update_date: "Fri, 07 Mar 2025 02:28:36 UTC"
 stages:
   - id: 979
     step: 14396
@@ -19,7 +19,7 @@ stages:
     is_completed: true
   - id: 983
     step: 14400
-    is_completed: false
+    is_completed: true
 topics:
   0:
     - title: Computer algorithms
